# auth

./: Cargo.toml  README.md
migrations/2023-12-17-095438_create_users/: up.sql
migrations/2024-07-06-172638_add_disable/: down.sql  up.sql
src/: auth_manager.rs  auth_server.rs  credentials.rs  cryptography.rs  database.rs  error.rs  lib.rs  main.rs  model.rs  response.rs  schema.rs  serde.rs  serde_implementations.rs  smtp_manager.rs  token.rs  trait.rs  user.rs  user_invite.rs  user_session.rs
src/flows/: mod.rs  user_login.rs  user_setup.rs
src/routes/: authenticated.rs  base.rs  login.rs  mod.rs  setup.rs
src/transmission/: bidirectional.rs  response.rs
