[package]
authors = ["Alexi Peck <alexinicolaspeck@gmail.com>"]
edition = "2021"
name = "auth"
version = "0.3.1"

[features]
debug-logging = []

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
axum = {version = "0.7.5", features = ["http2", "tokio", "json"]}
axum-core = "0.4.3"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
base64 = "0.22.1"
blake3 = "1.5.1"
chrono = {version = "0.4.38", features = ["serde"]}
cipher = "0.4.4"
cookie = {version = "0.18.1", features = ["secure", "percent-encode"]}
diesel = {version = "2.2.1", default-features = false, features = ["sqlite", "extras", "32-column-tables", "r2d2"]}
diesel_migrations = "2.2.0"
directories = "5.0.1"
email_address = {version = "0.2.4", features = ["serde_support"]}
google-authenticator = "0.4.2"
lettre = "0.11.7"
libsqlite3-sys = {version = ">=0.17.2, <0.27.0", features = ["bundled"]}
peck-lib = {git = "https://github.com/alexipeck/peck-lib", features = ["datetime", "hashing", "uid", "crypto", "auth"]}
pkcs1 = "0.7.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_core = {version = "0.6.4", features = ["getrandom"]}
regex = "1.10.5"
rsa = {version = "0.9.6", features = ["sha2", "serde", "std"]}
rust-argon2 = "2.1.0"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = {version = "1.0.120"}
signature = "2.2.0"
thiserror = "1.0.61"
tokio = {version = "1.38.0", default-features = false, features = ["macros", "net", "rt-multi-thread", "time", "signal"]}
toml = "0.8.14"
tower-http = {version = "0.5.2", features = ["cors", "trace"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18"}
uuid = {version = "1.9.1", features = ["v4", "serde"]}
